# python-accounts

./: .gitignore  Pipfile  README.md  pyproject.toml
config/: default.ini  test.ini
sql/: transactions.sql
src/python_accounts/: main.py  statement_import.py
src/python_accounts/banks/: natwest.py
statement_import/: __main__.py  natwest_csv.py
tests/: test_natwest.csv  test_statement_import.py
