[tool.poetry]
name = "python-accounts"
version = "0.1.0"
description = ""
authors = ["Minchus"]
readme = "README.md"
packages = [{include = "python_accounts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
load = 'python_accounts.main:main'